it's now mentioned in the error message:

    cdecl> declare ptr as pointer to void
                   ^
    16: syntax error: "ptr": name expected ("ptr" is a cdecl keyword)

Additionally, cdecl keywords are now also offered in suggestions.

** `register` arrays
`register` arrays are now correctly allowed.

** Zero-sized arrays
Zero-sized arrays are now correctly forbidden.


* Changes in Cdecl 11.6

** C++23 integer literal suffixes
The case-insensitive integer literal suffixes of `uz` and `zu` for `size_t` and
`z` for `ssize_t` are now supported.

** C++23 `operator[]`
Now allowing `operator[]` to have zero or more arguments starting in C++23.

** Fixed bug with array of function
Given:

    cdecl> explain int f[5](double)
    declare f as function (double) returning int

cdecl (1) incorrectly elided the array and therefore (2) didn't report the
array of function as an error.

** `typedef` of function
`typedef`s of function are now correctly allowed:

    typedef int F(void)


* Changes in Cdecl 11.5

** Better error/warning locations
Locations for error and warning messages have been improved.

** `show` error improvement
The `show` command now correctly prints all possible commands to define a type
when requested to show a type that doesn't exist.

** `register` warnings
A deprecated warning is now printed for a `register` array, enum, class,
struct, union, pointer, pointer to member, reference, and rvalue reference
between C++11 and C++14.  (Previously, a warning was printed only for built-in
types and typedefs.)

** K&R function parameter printed as `int`
For functions having K&R C typeless parameters, `int` is now printed in C89 and
later since such parameters are implicitly `int`.

** `show using` before C++11
A `show using` before C++11 now prints an error.

** Help output
Tweaked help output.


* Changes in Cdecl 11.4

** `_Atomic(T)` in C++23
Now supporting the `_Atomic(T)` macro in C++23.

** Fixed pointer to a `typedef` of `void`
Declarations like:
