@@ -1,1 +1,1 @@
-cdecl @ @ data/cast_i.cdecl @ @ 0
+cdecl @ @ -f data/cast_i.cdecl @ @ 0
