@@ -1,1 +1,1 @@
-cdecl @ @ data/cast_x.cdecl @ @ 65
+cdecl @ @ -f data/cast_x.cdecl @ @ 65
