@@ -1,1 +1,1 @@
-cdecl @ @ data/declare_i.cdecl @ @ 0
+cdecl @ @ -f data/declare_i.cdecl @ @ 0
