@@ -1,1 +1,1 @@
-cdecl @ @ data/declare_x.cdecl @ @ 65
+cdecl @ @ -f data/declare_x.cdecl @ @ 65
