@@ -1,1 +1,1 @@
-cdecl @ @ data/explain_i.cdecl @ @ 0
+cdecl @ @ -f data/explain_i.cdecl @ @ 0
