@@ -1,1 +1,1 @@
-cdecl @ @ data/explain_x.cdecl @ @ 65
+cdecl @ @ -f data/explain_x.cdecl @ @ 65
